# ad_adas_memo

./: .gitignore  README.md  _codeql_detected_source_root
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml
arcanum/: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
arcanum/.github/workflows/: ci.yml
arcanum/backend/: CMakeLists.txt
arcanum/backend/include/arcanum/backend/: Why3Runner.h  WhyMLEmitter.h
arcanum/backend/include/arcanum/report/: ReportGenerator.h
arcanum/backend/lib/: ReportGenerator.cpp  Why3Runner.cpp  WhyMLEmitter.cpp
arcanum/backend/tests/: BugReproWhyMLEmitterTest.cpp  CMakeLists.txt  ReportGeneratorTest.cpp  Why3RunnerRunTest.cpp  Why3RunnerTest.cpp  WhyMLEmitterTest.cpp
arcanum/cmake/: ArcanumConfig.cmake.in  GoogleTest.cmake
arcanum/dialect/: CMakeLists.txt
arcanum/dialect/include/arcanum/: DiagnosticTracker.h  ExitCodes.h
arcanum/dialect/include/arcanum/dialect/: ArcDialect.h  ArcDialect.td  ArcOps.h  ArcOps.td  ArcTypes.h  ArcTypes.td  Lowering.h
arcanum/dialect/include/arcanum/passes/: Passes.h
arcanum/dialect/lib/: ArcDialect.cpp  ArcOps.cpp  ArcTypes.cpp  Lowering.cpp  Passes.cpp
arcanum/dialect/tests/: ArcDialectTest.cpp  BugReproLoweringTest.cpp  CMakeLists.txt  DiagnosticTrackerTest.cpp  LoweringRegressionTest.cpp  LoweringTest.cpp  PassesTest.cpp
arcanum/docker/: Dockerfile.base  Dockerfile.dev  docker_build.sh  docker_config.sh  docker_run.sh  docker_shell.sh  entrypoint.sh
arcanum/docs/: arcanum-safe-cpp-subset.md  arcanum-tool-spec.md
arcanum/frontend/: CMakeLists.txt
arcanum/frontend/include/arcanum/frontend/: ContractParser.h  SubsetEnforcer.h
arcanum/frontend/lib/: ContractParser.cpp  SubsetEnforcer.cpp
arcanum/frontend/tests/: BugReproSubsetEnforcerTest.cpp  CMakeLists.txt  ContractParserTest.cpp  SubsetEnforcerTest.cpp  TestHelpers.h
arcanum/include/arcanum/: ExitCodes.h
arcanum/include/arcanum/backend/: Why3Runner.h
arcanum/include/arcanum/dialect/: ArcOps.h  ArcTypes.h  Lowering.h
arcanum/include/arcanum/report/: ReportGenerator.h
arcanum/lib/backend/: Why3Runner.cpp  WhyMLEmitter.cpp
arcanum/lib/dialect/: ArcOps.cpp  ArcTypes.cpp  Lowering.cpp
arcanum/lib/frontend/: ContractParser.cpp  SubsetEnforcer.cpp
arcanum/lib/passes/: Passes.cpp
arcanum/lib/report/: ReportGenerator.cpp
arcanum/plans/: 2026-02-23-arcanum-implementation-design.md  2026-02-27-slice3-loops-design.md  2026-02-27-slice3-loops-plan.md
arcanum/scripts/: run-clang-format.sh  run-clang-tidy.sh
arcanum/src/: DiagnosticTracker.h  ExitCodes.h  main.cpp
arcanum/src/backend/: Why3Runner.cpp  Why3Runner.h  WhyMLEmitter.cpp  WhyMLEmitter.h
arcanum/src/dialect/: ArcDialect.cpp  ArcDialect.h  ArcDialect.td  ArcOps.cpp  ArcOps.h  ArcOps.td  ArcTypes.cpp  ArcTypes.h  ArcTypes.td  Lowering.cpp  Lowering.h
arcanum/src/frontend/: ContractParser.cpp  ContractParser.h  SubsetEnforcer.cpp  SubsetEnforcer.h
arcanum/src/passes/: Passes.cpp
arcanum/src/report/: ReportGenerator.cpp  ReportGenerator.h
arcanum/tests/: CMakeLists.txt
arcanum/tests/lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
arcanum/tests/lit/error-paths/: invalid-mode.cpp  nonexistent-file.cpp  syntax-error.cpp
arcanum/tests/lit/subset-check/: reject-c-cast.cpp  reject-delete.cpp  reject-float.cpp  reject-goto.cpp  reject-mixed-types.cpp  reject-new.cpp  reject-raw-ptr.cpp  reject-throw.cpp  reject-try-catch.cpp  reject-virtual.cpp
arcanum/tests/lit/verify/: fail-cast-narrow.cpp  fail-overflow.cpp  pass-cast-sign-change.cpp  pass-cast-widen.cpp  pass-do-while-loop.cpp  pass-for-loop-break.cpp  pass-for-loop.cpp  pass-i64-add.cpp  pass-i8-add.cpp  pass-overflow-saturate.cpp  pass-overflow-wrap.cpp  pass-simple-add.cpp  pass-u16-add.cpp  pass-while-loop-continue.cpp  pass-while-loop.cpp
arcanum/tests/unit/: ArcDialectTest.cpp  BugHunterContractParserTest.cpp  BugHunterLoweringTest.cpp  BugHunterReportGeneratorTest.cpp  BugHunterWhyMLEmitterTest.cpp  ContractParserRegressionTest.cpp  ContractParserTest.cpp  LoweringTest.cpp  PassesTest.cpp  ReportGeneratorRegressionTest.cpp  ReportGeneratorTest.cpp  SubsetEnforcerTest.cpp  Why3RunnerRunTest.cpp  Why3RunnerTest.cpp  WhyMLEmitterRegressionTest.cpp  WhyMLEmitterTest.cpp
arcanum/tools/arcanum/: CMakeLists.txt  main.cpp
lane-studio/: DESIGN.md
memo/: deriving_anomarly_path_en.md  e2e_proved_architecture_research_agenda.md  e2e_proven_architecture_introduction.md  e2e_proven_architecture_research.md  iso26262_software_qualification.md  summary_v2.md  three_layer_formal_verification.md
plans/: 2026-02-22-ci-pipeline-design.md  2026-02-22-ci-pipeline-plan.md  2026-02-22-header-split-design.md  2026-02-22-header-split-plan.md  2026-02-23-arcanum-slice1-design.md  2026-02-23-arcanum-slice1-plan.md  2026-02-27-e2e-proved-architecture-design.md  2026-02-27-e2e-proved-architecture-plan.md  2026-02-27-e2e-proven-architecture-design.md  2026-02-27-e2e-proven-architecture-plan.md
